compiler/toc_hir_lowering/tests/snapshots/lowering__intro_import_defs_module-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var *p_def : int\n    module _\n        import p_def\n    end _"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..65): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..65): []
        StmtItem@(FileId(1), 5..21): ItemId(0)
          ConstVar@(FileId(1), 5..21): var "p_def"@(FileId(1), 10..15)
            Primitive@(FileId(1), 18..21): Int
        StmtItem@(FileId(1), 26..65): ItemId(1)
          Module@(FileId(1), 26..65): "_"@(FileId(1), 33..34)
          imports [
            SameAsItem "p_def"@(FileId(1), 50..55),
          ]
            StmtBody@(FileId(1), 60..60): []
error in file FileId(1) at 50..55: `p_def` is already imported in this scope
| note in file FileId(1) for 10..15: `p_def` declared pervasive here
| error in file FileId(1) for 50..55: `p_def` re-imported here
| info: `p_def` was declared pervasively, so it's already imported

