compiler/toc_hir_lowering/tests/snapshots/lowering__lower_all_expr-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ := all"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        StmtItem@(FileId(1), 0..12): ItemId(0)
          ConstVar@(FileId(1), 0..12): var "_"@(FileId(1), 4..5)
error in file FileId(1) at 9..12: unexpected token
| error in file FileId(1) for 9..12: expected expression, but found `all`

